qtpfsgui (1.8.12-2) unstable; urgency=low

  * Move maintenance to pkg-phototools now that the team has been created
    on alioth: Maintainer set to the team, put myself in Uploaders.
  * Update Vcs-* accordingly.
  * Add a “lrelease-qt4” call in the “makebuilddir” target, so that
    localization files get built, and then later installed. Delete the
    generated files in the “clean” target. Use a stamp file to avoid
    double-run.
  * No longer “rmdir” the /usr/share/qtpfsgui directory since it is no
    longer empty.
  * Add a link (through debian/links) from /usr/share/qtpfsgui/COPYING to
    GPL-2 in common-licenses, since it is used in the “License agreement”
    tab. Add a TODO item accordingly (upstream uses HTML <pre> tags to
    format it).
  * Add patch to fix FTBFS with gcc 4.3 snapshots:
     - 20_gcc4.3_includes.

 -- Cyril Brulebois <cyril.brulebois@enst-bretagne.fr>  Tue, 18 Dec 2007 16:42:21 +0100

qtpfsgui (1.8.12-1) unstable; urgency=low

  * Initial release (Closes: #410655).
  * The following patch removes the unneeded “Encoding” key from the
    upstream desktop file:
     - 10_remove_encoding_from_desktop_file.

 -- Cyril Brulebois <cyril.brulebois@enst-bretagne.fr>  Fri, 14 Dec 2007 02:46:03 +0100