@@ -1,0 +1,80 @@
+=head1 NAME
+
+qtpfsgui - GUI offering a workflow for HDR imaging
+
+
+=head1 SYNOPSIS
+
+B<qtpfsgui>
+
+
+=head1 DESCRIPTION
+
+Qtpfsgui is an open source graphical user interface application that
+aims to provide a workflow for HDR imaging.
+
+Supported HDR formats:
+
+=over
+
+=item *
+OpenEXR (extension: exr)
+
+=item *
+Radiance RGBE (extension: hdr)
+
+=item *
+Tiff formats: 16bit, 32bit (float) and LogLuv (extension: tiff)
+
+=item *
+Raw image formats (extension: various)
+
+=item *
+PFS native format (extension: pfs)
+
+=back
+
+
+Supported LDR formats:
+
+=over
+
+=item *
+JPEG, PNG, PPM, PBM, TIFF(8 bit)
+
+=back
+
+
+Supported features:
+
+=over
+
+=item *
+Create an HDR file from a set of images (formats: JPEG, TIFF 8bit and 16bit, RAW) of the same scene taken at different exposure setting.
+
+=item *
+Save and load HDR images.
+
+=item *
+Rotate and resize HDR images.
+
+=item *
+Tonemap HDR images.
+
+=item *
+Copy exif data between sets of images.
+
+=item *
+Supports internationalization.
+
+=back
+
+
+=head1 AUTHOR
+
+Qtpfsgui was written by Giuseppe Rota and several contributors (see
+also the L<AUTHORS> file).
+
+This manual page was written by Cyril Brulebois
+<cyril.brulebois@enst-bretagne.fr> and is licensed under the same term
+as the package itself.
