@@ -15,6 +15,8 @@ qtpfsgui (1.8.12-2) unstable; urgency=low
     format it).
   * Add patch to fix FTBFS with gcc 4.3 snapshots:
      - 20_gcc4.3_includes.
+  * Add a minimal manpage generated from debian/qtpfsgui.pod using
+    pod2man.
 
  -- Cyril Brulebois <cyril.brulebois@enst-bretagne.fr>  Tue, 18 Dec 2007 16:42:21 +0100
 
